<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_specialist"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/specialist" />
        <item
            android:id="@+id/nav_hospital"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/hospital" />
        <item
            android:id="@+id/nav_school"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/school" />

    </group>


    <item android:title="@string/communicate">


        <menu>
            <item
                android:id="@+id/nav_aboutUs"
                android:icon="@drawable/ic_group_black_24dp"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_contactUs"
                android:icon="@drawable/ic_call_black_24dp"
                android:title="@string/contact_ua" />
        </menu>
    </item>

</menu>
